--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         consider a Lymana Ukulele. I would be honored to craft you one!
       </p>
     </div>
+    <div class="ui embed" data-source="youtube" data-id="O6Xo21L0ybE"></div>
   </div>
 
 <div class="footer-background">
@@ -55,10 +56,8 @@
         Roman's Portfolio</a></a>
       <a class="item">Roman's Contact</a>
     </div>
-  </div>
 </div>
 
-
-
+</div>
 </body>
 </html>
