--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="four wide column" style="padding: 50px;">
     <img class="ui image item" src="https://i.imgur.com/EKCgpHD.png">
   </div>
-  <div class="five wide column" style="padding: 50px;">
-    <h2>LYMANA UKULELES</h2>
+  <div class="seven wide column" style="padding: 50px;">
+    <h2>LYMANA</h2> <h4>UKULELES</h4>
   </div>
-  <div class="four wide column" style="text-align: right; margin-top: 10px; margin-bottom: 10px";>
+  <div class="four wide column" style="text-align: right; margin-top: 50px; margin-bottom: 10px";>
     <h1>Aloha! Lymana Ukuleles are hand-crafted, custom instruments built locally here in Hawaii.</h1>
   </div>
 </div>
@@ -36,13 +36,18 @@
     <img class="ui centered large image" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
          alt="background logo">
     <h3 class="standard"><a name="AboutMe">ABOUT ME</a></h3>
-    <div class="standard centered">
-      <p>Aloha, my name is Lyman Ashikawa and I was born and raised on the Hawaiian island of Oahu. I have been
+    <div class="ui two column grid container">
+      <div class="column">
+      <p class="standard" style="padding: 15px;">Aloha, my name is Lyman Ashikawa and I was born and raised on the Hawaiian island of Oahu. I have been
         building ukuleles for the last 30 years and have since perfected my craft. I have not only made dozens
         of custom ukuleles for everyday people, but have also had the honor of building instruments for icons such
         as Bill Tapia (NOTE : could link to Bill Tapia story/page here). I hope you enjoy browsing my site and
         consider a Lymana Ukulele. I would be honored to craft you one!
       </p>
+      </div>
+      <div class="column">
+        <img class="ui image item" src="https://p7.hiclipart.com/preview/749/459/738/kala-makala-concert-ukulele-kala-makala-soprano-ukelele-musical-instruments-musical-instruments.jpg"> </img>
+      </div>
     </div>
     <div class="ui embed" data-source="youtube" data-id="O6Xo21L0ybE"></div>
   </div>
