--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="standard" style="padding: 15px;">Aloha, my name is Lyman Ashikawa and I was born and raised on the Hawaiian island of Oahu. I have been
         building ukuleles for the last 30 years and have since perfected my craft. I have not only made dozens
         of custom ukuleles for everyday people, but have also had the honor of building instruments for icons such
-        as Bill Tapia (NOTE : could link to Bill Tapia story/page here). I hope you enjoy browsing my site and
+        as <a href="billtapia.html">Bill Tapia</a>. I hope you enjoy browsing my site and
         consider a Lymana Ukulele. I would be honored to craft you one!
       </p>
       </div>
