--- a/billtapia.html
+++ b/billtapia.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Lymana Ukuleles</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Mansalva|Niconne|Satisfy|Knewave|Pacifico">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
 </head>
 <body>
-
+<div class="ui grid tan-background"><a name="Top"></a>
+  <div class="four wide column" style="padding: 50px;">
+    <img class="ui image item" src="https://i.imgur.com/EKCgpHD.png">
+  </div>
+  <div class="seven wide column" style="padding: 50px;">
+    <h2>LYMANA</h2> <h4>UKULELES</h4>
+  </div>
+  <div class="four wide column" style="text-align: right; margin-top: 50px; margin-bottom: 10px";>
+    <h1>Aloha! Lymana Ukuleles are hand-crafted, custom instruments built locally here in Hawaii.</h1>
+  </div>
+</div>
+<div id="navbar">
+  <div class="ui center aligned grid borderless topmenu menu beige-background-color" style="margin-top: 5px;">
+    <a class="item" href="index.html">HOME</a>
+    <a class="item" href="index.html">ABOUT ME</a>
+    <a class="item">GALLERY</a>
+    <a class="item">LOCATION</a>
+    <a class="item">CONTACT</a>
+  </div>
+</div>
 </body>
 </html>
