--- a/billtapia.html
+++ b/billtapia.html
@@ -26,11 +26,17 @@
 <div id="navbar">
   <div class="ui center aligned grid borderless topmenu menu beige-background-color" style="margin-top: 5px;">
     <a class="item" href="index.html">HOME</a>
-    <a class="item" href="index.html">ABOUT ME</a>
-    <a class="item">GALLERY</a>
-    <a class="item">LOCATION</a>
-    <a class="item">CONTACT</a>
   </div>
 </div>
+
+<div class="site-background">
+  <h3 class="standard" style="margin-top: 35px;"><a>Bill Tapia Ukulele</a></h3>
+  <p class="standard" style="padding: 15px; margin-top: 30px;">
+    I was inspired to build BILL TAPIA'S  RED UKULELE  because he always wore red clothing and I thought a red ukulele would match his red clothes.
+    His white ukulele was built because I saw a picture of him holding a white Kamaka pineapple ukulele,
+    so I built him the white tenor. I miss Bill  he had some great stories of old Hawaii.
+  </p>
+</div>
+
 </body>
 </html>
