--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="ui grid tan-background"><a name="Top"></a>
   <div class="four wide column" style="padding: 50px;">
-    <img class="ui image item" src="https://i.imgur.com/EKCgpHD.png">
+    <img class="ui rounded image item" src="https://i.imgur.com/EKCgpHD.png">
   </div>
   <div class="seven wide column" style="padding: 50px;">
     <h2>LYMANA</h2> <h4>UKULELES</h4>
@@ -33,20 +33,26 @@
 </div>
 </div>
   <div class="site-background">
-    <img class="ui centered large image" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
+    <img class="ui rounded centered large image" style="margin-top: 50px;" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
          alt="background logo">
     <h3 class="standard"><a name="AboutMe">ABOUT ME</a></h3>
     <div class="ui two column grid container">
       <div class="column">
-      <p class="standard" style="padding: 15px;">Aloha, my name is Lyman Ashikawa and I was born and raised on the Hawaiian island of Oahu. I have been
+      <p class="standard" style="padding: 15px; margin-top: 65px;">Aloha, my name is Lyman Ashikawa and I was born and raised on the Hawaiian island of Oahu. I have been
         building ukuleles for the last 30 years and have since perfected my craft. I have not only made dozens
         of custom ukuleles for everyday people, but have also had the honor of building instruments for icons such
-        as <a href="billtapia.html">Bill Tapia</a>. I hope you enjoy browsing my site and
+        as <a href="billtapia.html">Bill Tapia</a> (click the link to see the project). I hope you enjoy browsing my site and
         consider a Lymana Ukulele. I would be honored to craft you one!
+
+        Types I build:
+
+        Materials:
+
+
       </p>
       </div>
       <div class="column">
-        <img class="ui image item" src="https://p7.hiclipart.com/preview/749/459/738/kala-makala-concert-ukulele-kala-makala-soprano-ukelele-musical-instruments-musical-instruments.jpg"> </img>
+        <img class="ui rounded image item" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/262385_195020307211951_7530939_n.jpg?_nc_cat=102&_nc_oc=AQkJ9mVLqolT2C8E6xx_YQI73tA2Qq3MQoTrCw4gmrgW50D166tAoM9ZvnUQjB_qRg4&_nc_ht=scontent-lax3-1.xx&oh=9ef334811310726a91c6eb292a219e1b&oe=5E2286C5">
       </div>
     </div>
     <div class="ui embed" data-source="youtube" data-id="O6Xo21L0ybE"></div>
