worked on embedding youtube

--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
         <img class="ui rounded image item" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/262385_195020307211951_7530939_n.jpg?_nc_cat=102&_nc_oc=AQkJ9mVLqolT2C8E6xx_YQI73tA2Qq3MQoTrCw4gmrgW50D166tAoM9ZvnUQjB_qRg4&_nc_ht=scontent-lax3-1.xx&oh=9ef334811310726a91c6eb292a219e1b&oe=5E2286C5">
       </div>
     </div>
-    <div class="ui embed" data-source="youtube" data-id="O6Xo21L0ybE"></div>
-  </div>
+    <h3 class="standard"><a>DEMO</a></h3>
+    <div class="ui embed" style="min-width: 200px;" data-source="youtube" data-id="tLHb0Kw6z5s"></div>
+
+<h3 class="standard"><a>LOCATION</a></h3>
+
+    <div class="ui embed"  data-url="https://www.youtube.com/embed/O6Xo21L0ybE"> </div>
 
 <div class="footer-background">
   <div class="column">
@@ -68,7 +72,13 @@
       <a class="item">Roman's Contact</a>
     </div>
 </div>
-
 </div>
+  </div>
+
+
+<script>
+  $('.ui.embed').embed();
+</script>
+
 </body>
 </html>
