--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
     Site created by Computer Science student Roman Nicolai
     <hr/>
     <div class="ui relaxed list">
-      <a class="item"><a href="romannicolai.github.io">
+      <a class="item"><a href="roman.html">
         Roman's Portfolio</a></a>
-      <a class="item">Roman's Contact</a>
     </div>
 </div>
 </div>
