--- a/roman.html
+++ b/roman.html
@@ -30,12 +30,19 @@
 </div>
 
 <div class="site-background">
-  <h3 class="standard" style="margin-top: 35px;"><a>Bill Tapia Ukulele</a></h3>
+  <h3 class="standard" style="margin-top: 35px;"><a>Site Creator Roman Nicolai</a></h3>
+  <div class="ui two column grid container">
+    <div class="column">
   <p class="standard" style="padding: 15px; margin-top: 30px;">
     Roman Nicolai is a student pursuing a degree in Computer Science at the University of Hawaii at Manoa.
     You can see his full website <a href="roman-nicolai.com">HERE</a>.
     His website contains current projects, essays, as well as his resume.
   </p>
+    </div>
+    <div class="column">
+      <img class="ui rounded image item" src="http://www.roman-nicolai.com/images/pic1.PNG">
+    </div>
+  </div>
 </div>
 
 </body>
