progress on embedding youtube

--- a/index.html
+++ b/index.html
@@ -56,14 +56,20 @@
       </div>
     </div>
     <h3 class="standard"><a>DEMO</a></h3>
-    <div class="ui embed" style="min-width: 200px;" data-source="youtube" data-id="tLHb0Kw6z5s"></div>
+    <div class="ui embed" style="width: 600px; max-height: 300px; margin-left: 265px" data-source="youtube" data-id="tLHb0Kw6z5s"></div>
+
+<h3 class="standard"><a>IN ACTION</a></h3>
+
+    <div class="ui embed"  data-url="https://www.youtube.com/embed/voUZbJreMSQ"> </div>
+
+    <div class="ui embed" style="margin-top: 25px;" data-url="https://www.youtube.com/embed/m0X3AANh8t4"> </div>
 
 <h3 class="standard"><a>LOCATION</a></h3>
 
-    <div class="ui embed"  data-url="https://www.youtube.com/embed/O6Xo21L0ybE"> </div>
+    <div class="ui embed"  data-url="https://www.youtube.com/embed/voUZbJreMSQ"> </div>
 
 <div class="footer-background">
-  <div class="column">
+  <div class="column" style="font-size: 25px;">
     Site created by Computer Science student Roman Nicolai
     <hr/>
     <div class="ui relaxed list">
