--- a/roman.html
+++ b/roman.html
@@ -45,5 +45,17 @@
   </div>
 </div>
 
+<div class="footer-background">
+  <div class="column" style="font-size: 25px;">
+    Site created by Computer Science student Roman Nicolai
+    <hr/>
+    <div class="ui relaxed list">
+      <a class="item"><a href="roman.html">
+        Roman's Portfolio</a></a>
+    </div>
+  </div>
+</div>
+</div>
+
 </body>
 </html>
