--- a/billtapia.html
+++ b/billtapia.html
@@ -36,6 +36,30 @@
     His white ukulele was built because I saw a picture of him holding a white Kamaka pineapple ukulele,
     so I built him the white tenor. I miss Bill  he had some great stories of old Hawaii.
   </p>
+  <div class="ui three column grid container">
+    <div class="column">
+      <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/2377b945e3ae43f5addc8a405a87231e">
+    </div>
+    <div class="column">
+      <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/3855bbe903ff4a6ea311274df0192cb8">
+    </div>
+    <div class="column">
+      <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/868d6ea0530f462dabd14f89bd42c259">
+    </div>
+  </div>
+  <img class="ui rounded centered image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/fb2fc07d582342c38fd8b5a86fbdf9ca">
+</div>
+
+<div class="footer-background">
+  <div class="column" style="font-size: 25px;">
+    Site created by Computer Science student Roman Nicolai
+    <hr/>
+    <div class="ui relaxed list">
+      <a class="item"><a href="roman.html">
+        Roman's Portfolio</a></a>
+    </div>
+  </div>
+</div>
 </div>
 
 </body>
