--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
     <a class="item" href="#Top">HOME</a>
     <a class="item" href="#AboutMe">ABOUT ME</a>
     <a class="item">GALLERY</a>
-    <a class="item">LOCATION</a>
-    <a class="item">CONTACT</a>
+    <a class="item" href="#Demo">VIDEOS</a>
+    <a class="item" href="#Location">LOCATION</a>
+    <a class="item" href="#Location">CONTACT</a>
 </div>
 </div>
   <div class="site-background">
-    <img class="ui rounded centered large image" style="margin-top: 50px;" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
+    <img class="ui rounded centered large image" style="padding-top: 50px;" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
          alt="background logo">
     <h3 class="standard"><a name="AboutMe">ABOUT ME</a></h3>
     <div class="ui two column grid container">
@@ -55,8 +56,8 @@
         <img class="ui rounded image item" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/262385_195020307211951_7530939_n.jpg?_nc_cat=102&_nc_oc=AQkJ9mVLqolT2C8E6xx_YQI73tA2Qq3MQoTrCw4gmrgW50D166tAoM9ZvnUQjB_qRg4&_nc_ht=scontent-lax3-1.xx&oh=9ef334811310726a91c6eb292a219e1b&oe=5E2286C5">
       </div>
     </div>
-    <h3 class="standard"><a>DEMO</a></h3>
-    <div class="ui embed" style="width: 600px; max-height: 300px; margin-left: 265px" data-source="youtube" data-id="tLHb0Kw6z5s"></div>
+    <h3 class="standard"><a name="Demo">DEMO</a></h3>
+    <div class="ui embed" style="width: 600px; height: 300px; margin-left: 265px" data-source="youtube" data-id="tLHb0Kw6z5s"></div>
 
 <h3 class="standard"><a>IN ACTION</a></h3>
 
@@ -64,9 +65,22 @@
 
     <div class="ui embed" style="margin-top: 25px;" data-url="https://www.youtube.com/embed/m0X3AANh8t4"> </div>
 
-<h3 class="standard"><a>LOCATION</a></h3>
-
+<h3 class="standard"><a name="Location">LOCATION & CONTACT</a></h3>
+    <div class="ui two column grid container">
+      <div class="column">
     <div class="ui embed"  data-url="https://www.youtube.com/embed/voUZbJreMSQ"> </div>
+      </div>
+      <div class="column">
+      <p class="centered standard" style="padding-left: 155px;">
+        CONTACT INFO </p>
+        <p class="standard" style="padding: 15px;">
+          Phone Number : (808) 941-1690 </p>
+        <p class="standard" style="padding: 15px;">
+          Email :  </p>
+        <p class="standard" style="padding: 15px;">
+          Store Address : 1018 McCully St, Honolulu, HI 96826 </p>
+      </div>
+    </div>
 
 <div class="footer-background">
   <div class="column" style="font-size: 25px;">
