--- a/billtapia.html
+++ b/billtapia.html
@@ -29,14 +29,14 @@
   </div>
 </div>
 
-<div class="site-background">
+<div class="site-background-short">
   <h3 class="standard" style="margin-top: 35px;"><a>Bill Tapia Ukulele</a></h3>
   <p class="standard" style="padding: 15px; margin-top: 30px;">
     I was inspired to build BILL TAPIA'S  RED UKULELE  because he always wore red clothing and I thought a red ukulele would match his red clothes.
     His white ukulele was built because I saw a picture of him holding a white Kamaka pineapple ukulele,
     so I built him the white tenor. I miss Bill  he had some great stories of old Hawaii.
   </p>
-  <div class="ui three column grid container">
+  <div class="ui four column grid container">
     <div class="column">
       <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/2377b945e3ae43f5addc8a405a87231e">
     </div>
@@ -46,9 +46,14 @@
     <div class="column">
       <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/868d6ea0530f462dabd14f89bd42c259">
     </div>
+    <div class="column">
+      <img class="ui rounded image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/4fa9aa057e0d48ccb370aaedf3cfd1f1">
+    </div>
   </div>
+
   <img class="ui rounded centered image item" src="https://storage.googleapis.com/production-sitebuilder-v1-0-3/473/2473/RnrcyH0C/fb2fc07d582342c38fd8b5a86fbdf9ca">
-</div>
+
+  </div>
 
 <div class="footer-background">
   <div class="column" style="font-size: 25px;">
