--- a/billtapia.html
+++ b/billtapia.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="site-background-short">
-  <h3 class="standard" style="margin-top: 35px;"><a>Bill Tapia Ukulele</a></h3>
+  <h3 class="standard" style="padding-top: 35px;"><a>Bill Tapia Ukulele</a></h3>
   <p class="standard" style="padding: 15px; margin-top: 30px;">
     I was inspired to build BILL TAPIA'S  RED UKULELE  because he always wore red clothing and I thought a red ukulele would match his red clothes.
     His white ukulele was built because I saw a picture of him holding a white Kamaka pineapple ukulele,
