--- a/roman.html
+++ b/roman.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="site-background-shorter">
-  <h3 class="standard" style="margin-top: 35px;"><a>Site Creator Roman Nicolai</a></h3>
+  <h3 class="standard" style="padding-top: 35px;"><a>Site Creator Roman Nicolai</a></h3>
   <div class="ui two column grid container">
     <div class="column">
   <p class="standard" style="padding: 15px; margin-top: 30px;">
