--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <a class="item" href="#Demo">VIDEOS</a>
     <a class="item" href="#Location">LOCATION</a>
     <a class="item" href="#Location">CONTACT</a>
+    <a class="item" href="https://www.facebook.com/Lymana-Ukuleles-295548507267477/"> <i class="facebook f icon"></i> </a>
 </div>
 </div>
   <div class="site-background">
