trying to get favicon to work

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Mansalva|Niconne|Satisfy|Knewave|Pacifico">
+  <link rel="shortcut icon" href="image/uke.ico">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
   <style>
     /* Set the size of the div element that contains the map */
@@ -18,26 +24,6 @@
       width: 70%;  /* The width is the width of the web page */
     }
   </style>
-
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-
-
 </head>
 
 <body>
@@ -58,7 +44,7 @@
     <a class="item" href="#Demo">VIDEOS</a>
     <a class="item" href="#Location">LOCATION</a>
     <a class="item" href="#Location">CONTACT</a>
-    <a class="item" href="https://www.facebook.com/Lymana-Ukuleles-295548507267477/"> <i class="facebook f icon"></i> </a>
+    <a class="item" href="https://www.facebook.com/Lymana-Ukuleles-295548507267477/" target="_blank"> <i class="facebook f icon"></i> </a>
 </div>
 </div>
   <div class="site-background">
