--- a/roman.html
+++ b/roman.html
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="site-background-shorter">
+<div class="site-background">
   <h3 class="standard" style="padding-top: 35px;"><a>Site Creator Roman Nicolai</a></h3>
   <div class="ui two column grid container">
     <div class="column">
