--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Mansalva|Niconne|Satisfy|Knewave|Pacifico">
-  <link rel="shortcut icon" type="image/png" href=".idea/img/uku.png">
+  <link rel="shortcut icon" type="image/png" href=".idea/img/ukul.png">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript"
           src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.js"></script>
@@ -26,7 +26,7 @@
 <container>
 <div class="ui grid tan-background"><a name="Top"></a>
   <div class="three wide column" style="padding-left: 20px; padding-top: 55px">
-    <img class="ui rounded image item" src="https://i.imgur.com/EKCgpHD.png">
+    <img class="ui rounded image item" src=".idea/img/owlG.png">
   </div>
   <div class="twelve wide column" style="padding-top: 55px; padding-right: 0px; margin-right: 0px">
     <h2>LYMANA UKULELES</h2>
@@ -36,12 +36,15 @@
   <div class="ui center aligned grid borderless topmenu menu beige-background-color" style="margin-top: 5px;">
     <a class="item" href="#Top">HOME</a>
     <a class="item" href="#AboutMe">ABOUT ME</a>
-    <a class="item">GALLERY</a>
+    <a class="item" href="gallery.html">GALLERY</a>
     <a class="item" href="#Demo">VIDEOS</a>
     <a class="item" href="#Location">LOCATION</a>
     <a class="item" href="#Location">CONTACT</a>
+    <a class="item" href="forsale.html">FOR SALE</a>
+    <a class="item" href="#Location">PUEO</a>
     <a class="item" href="https://www.facebook.com/Lymana-Ukuleles-295548507267477/" target="_blank"> <i class="facebook f icon"></i> </a>
-</div>
+
+  </div>
 </div>
   <div class="site-background">
     <img class="ui rounded centered large image" style="padding-top: 50px;" src="https://images.builderservices.io/s/cdn/v1.0/i/m?url=https%3A%2F%2Fstorage.googleapis.com%2Fproduction-sitebuilder-v1-0-3%2F473%2F2473%2FRnrcyH0C%2F69f1a6304bfb44e79a16a0ec262b0ab7&amp;methods=resize%2C2000%2C5000"
@@ -84,6 +87,12 @@
       <div class="column">
         <div class="ui embed" data-url="https://www.youtube.com/embed/BBrRBAY6PfI"> </div>
       </div>
+      <div class="column">
+        <div class="ui embed" data-url="https://www.youtube.com/embed/tpkm_E9YvYc"> </div>
+      </div>
+      <div class="column">
+        <div class="ui embed" data-url="https://www.youtube.com/embed/g0iGVaBIy0Y"> </div>
+      </div>
     </div>
 
 <h3 class="standard"><a name="Location">LOCATION & CONTACT</a></h3>
@@ -121,16 +130,17 @@
       <p class="standard" style="padding-left: 125px;">
         CONTACT INFO </p>
         <p class="standard" style="padding: 15px;">
-          Phone Number : (808) 941-1690 </p>
-        <p class="standard" style="padding: 15px;">
-          Email : lymanaukuleles@gmail.com </p>
+          Email : lymanaukuleles@yahoo.com </p>
         <p class="standard" style="padding: 15px;">
           Store Address : 1018 McCully St, Honolulu, HI 96826 </p>
+        <p class="standard" style="padding: 15px;">
+          Stores that Sell: <a href="https://ukulelestorehawaii.com">Ukulele Store</a>, <a href="http://ukulelefriend.com/">Ukulele Friend</a>,
+          <a href="http://basisrecords.com/">Basis Records</a> </p>
       </div>
     </div>
 
 <div class="footer-background">
-  <div class="column" style="font-size: 25px; padding-left: 30px">
+  <div class="column" style="font-size: 15px; padding-left: 20px">
     Site created by Computer Science student Roman Nicolai
     <hr/>
     <div class="ui relaxed list">
