--- a/roman.html
+++ b/roman.html
@@ -13,14 +13,11 @@
 </head>
 <body>
 <div class="ui grid tan-background"><a name="Top"></a>
-  <div class="four wide column" style="padding: 50px;">
-    <img class="ui image item" src="https://i.imgur.com/EKCgpHD.png">
+  <div class="three wide column" style="padding-left: 20px; padding-top: 55px">
+    <img class="ui rounded image item" src=".idea/img/owlG.png">
   </div>
-  <div class="seven wide column" style="padding: 50px;">
-    <h2>LYMANA</h2> <h4>UKULELES</h4>
-  </div>
-  <div class="four wide column" style="text-align: right; margin-top: 50px; margin-bottom: 10px";>
-    <h1>Aloha! Lymana Ukuleles are hand-crafted, custom instruments built locally here in Hawaii.</h1>
+  <div class="twelve wide column" style="padding-top: 55px; padding-right: 0px; margin-right: 0px">
+    <h2>LYMANA UKULELES</h2>
   </div>
 </div>
 <div id="navbar">
