--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <a class="item" href="#Location">LOCATION</a>
     <a class="item" href="#Location">CONTACT</a>
     <a class="item" href="forsale.html">FOR SALE</a>
-    <a class="item" href="#Location">PUEO</a>
+    <a class="item" href="pueo.html">PUEO</a>
     <a class="item" href="https://www.facebook.com/Lymana-Ukuleles-295548507267477/" target="_blank"> <i class="facebook f icon"></i> </a>
 
   </div>
@@ -137,6 +137,25 @@
           Stores that Sell: <a href="https://ukulelestorehawaii.com">Ukulele Store</a>, <a href="http://ukulelefriend.com/">Ukulele Friend</a>,
           <a href="http://basisrecords.com/">Basis Records</a> </p>
       </div>
+
+      <table>
+        <tr>
+          <th>EMAIL</th>
+          <th>STORE ADDRESS</th>
+          <th>STORE THAT SELLS</th>
+          <th>STORE THAT SELLS</th>
+          <th>STORE THAT SELLS</th>
+        </tr>
+        <tr>
+          <td style="color: brown">lymanaukuleles@yahoo.com</td>
+          <td style="color: brown">1018 McCully St, Honolulu, HI 96826</td>
+          <td><a href="https://ukulelestorehawaii.com">Ukulele Store</a></td>
+          <td><a href="http://ukulelefriend.com/">Ukulele Friend</a></td>
+          <td><a href="http://basisrecords.com/">Basis Records</a></td>
+        </tr>
+
+      </table>
+
     </div>
 
 <div class="footer-background">
